[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Floor.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Platforms.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 330, 15.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 330.547, 12.25 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 133, 21.5 )

[node name="Platforms" type="Node2D"]
position = Vector2( 505, 750 )
script = ExtResource( 2 )

[node name="Platform" type="StaticBody2D" parent="."]
position = Vector2( -440, 0 )

[node name="Sprite" type="Sprite" parent="Platform"]
position = Vector2( 7.62939e-06, 2.86102e-06 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform"]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="Platform"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform/Area2D"]
position = Vector2( -2.54688, -8.75 )
shape = SubResource( 2 )

[node name="Platform2" type="StaticBody2D" parent="."]
position = Vector2( 440, 0 )

[node name="Sprite" type="Sprite" parent="Platform2"]
position = Vector2( 7.62939e-06, 2.86102e-06 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform2"]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="Platform2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform2/Area2D"]
position = Vector2( 1.90625, -10 )
shape = SubResource( 2 )

[node name="ScoreArea" type="Area2D" parent="."]
position = Vector2( 0, 33.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreArea"]
position = Vector2( 0, 2 )
shape = SubResource( 3 )

[connection signal="body_entered" from="Platform/Area2D" to="." method="_on_Platform_body_entered"]
[connection signal="body_entered" from="Platform2/Area2D" to="." method="_on_Platform_body_entered"]
[connection signal="body_entered" from="ScoreArea" to="." method="_on_ScoreArea_body_entered"]
[connection signal="body_exited" from="ScoreArea" to="." method="_on_ScoreArea_body_exited"]
